Wed Dec 13 18:06:29 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Uncommented the code in pctcutoff1 - test now passes.

Wed Dec 13 17:53:19 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix: m36_key_file parameter wasn't being set with DA flimsy
	  databases (thanks to Mark Hagger).

	* indextest.cc changed to use "\n" instead of endl - compiles
	  with STLport again.

Wed Dec 13 17:27:17 GMT 2000 Olly Betts

	* OmMSet is now an STL compatible container.

	* Om*Iterator::difference_type was unsigned - now signed.
	
	* net/readquery.ll: fixed compiler warning.
	
	* Remote backend was defaulting to collapse on key 0.
	
Wed Dec 13 16:48:49 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Add handling of DatabaseModified to OmEnquire::get_mset()

Wed Dec 13 16:28:47 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Escape zero bytes in the network protocol, since these were
	  breaking things when being passed across as part of keys.

	* Add test of having zero bytes in the collapse keys.

	* In testsuite, only display the context of errors if there is one
	  present.

Wed Dec 13 14:44:46 GMT 2000 Olly Betts

	* Implemented OmMSet::operator[]().

Wed Dec 13 14:30:57 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added support for handling overwritten database conditions.
	  Currently works for OmDocument::get_{data,key}().

Wed Dec 13 13:20:45 GMT 2000 Olly Betts

	* Elaborated API hitlist in todo.xml.

Wed Dec 13 12:28:18 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fix to BackendManager to stop it removing tables prematurely.

Wed Dec 13 11:49:53 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Apply the stemmer to query terms used in spaceterms1.  (Not doing
	  so caused the test to fail spuriously on local databases, since the
	  terms are stemmed at index time).  The test still fails with da and
	  db databases.
	