@@ -26,6 +26,7 @@
 #include "testsuite.h"
 
 extern test_desc db_tests[];
+extern test_desc specchar_tests[];
 extern test_desc doclendb_tests[];
 extern test_desc collfreq_tests[];
 extern test_desc writabledb_tests[];
